new file:   .env.example 	modified:   package-lock.json 	modified:   package.json 	new file:   prisma/migrations/20260210091409_add_staff_profile/migration.sql 	modified:   prisma/schema.prisma 	modified:   src/lib/prisma.ts 	modified:   src/modules/auth/Auth.model.ts 	modified:   src/modules/auth/Auth.service.ts 	modified:   src/modules/user/User.controller.ts 	modified:   src/modules/user/User.route.ts 	new file:   src/services/userProfileService.ts 	modified:   src/utils/cloudinary.ts 	new file:   src/utils/userRoleService.ts 	modified:   swagger-output.json
